--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "typescript": "^5.2.2"
   }
 }
