--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-markdown": "^8.0.7",
     "typescript": "^5.2.2"
   }
 }
