--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-markdown": "^8.0.7",
+    "supports-color": "8.1.1",
     "typescript": "^5.2.2"
   }
 }
