--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "dependencies": {
     "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
+    "daisyui": "^3.7.4",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "postcss": "^8.4.29",
     "react": "latest",
     "react-dom": "latest",
     "react-markdown": "^8.0.7",
     "supports-color": "8.1.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   }
 }
