--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@posts/*": ["./app/_public/_posts/*"]
+      "@posts/*": ["./app/_public/_posts/*"],
+      "@app/*": ["./app/*"],
+      "@styles/*": ["./styles/*"]
     },
     "lib": ["ESNext"],
     "module": "esnext",
@@ -31,7 +33,14 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "tailwind.config.cjs"
+  ],
+  "exclude": ["node_modules"],
+  "moduleResolution": ["node_modules", ".next", "node"]
 }
 
