--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@types/node": "^20.6.0",
+    "classnames": "^2.3.2",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "latest",
